# golem-scalajs-wit-bindgen

./: Cargo.toml  README.md  main.wit
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
src/codegen/: function.rs  interface.rs  mod.rs  record.rs  variant.rs
src/types/: mod.rs  primitive.rs  scala_type.rs  type_map.rs  type_name.rs
tests/: all.rs
tests/wit/: app-command.wit  authentication.scala  authentication.wit  comments.wit  counter.scala  counter.wit  functions.scala  functions.wit  messaging-service.scala  messaging-service.wit  random.scala  random.wit  resources.scala  resources.wit  scalac-excluded.txt  shopping-cart.scala  shopping-cart.wit  types.scala  types.wit  use.wit  user-management.scala  user-management.wit
