[package]
name = "cargo-scalajs-wit-bindgen"
description = "CLI tool for generating Scala.js bindings from a WIT file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser = "0.11.1"
convert_case = "0.6.0"
id-arena = "2.2.1"
clap = { version = "4.4.4", features = ["derive"] }
