[package]
name = "golem-scalajs-wit-bindgen"
description = "Golem Cloud CLI tool for generating Scala.js bindings from a WIT file"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.golem.cloud/"
authors = ["Golem Cloud team"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser = "0.11.1"
convert_case = "0.6.0"
id-arena = "2.2.1"
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6"
