[package]
name = "golem-scalajs-wit-bindgen"
description = "Golem Cloud CLI tool for generating Scala.js bindings from a WIT file"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.golem.cloud/"
authors = ["Golem Cloud team"]
readme = "README.md"

[dependencies]
wit-parser = "0.215.0"
convert_case = "0.6.0"
id-arena = "2.2.1"
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6"

[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1.4.0"
libtest-mimic = "0.7.3"
anyhow = "1.0.86"

[[test]]
name = "all"
harness = false
